--- a/Sistema.API/appsettings.json
+++ b/Sistema.API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
+        "AppDbContext": "User Id=CarlosM;Password=Galaxilife4;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XEPDB1)));",
         "AppDbContext.mariadb": "Server=127.0.0.1;Database=SistemaDB;Uid=root;Pwd=Galaxilife4!",
-        "AppDbContext": "Host=localhost ; port=5432 ; user Id=postgres ; database=Sistema ; password=Galaxilife4! "
+        "AppDbContext.postgres": "Host=localhost ; port=5432 ; user Id=postgres ; database=Sistema ; password=Galaxilife4! "
     }
 }
